// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderCellProperty/> should render 1`] = `
<HeaderCell
  className="foo"
>
  <div
    className="content"
  >
    <div
      className="cell"
    >
      <span
        className="title"
      >
        foo
      </span>
      <i
        className="material-icons md-1 directionIcon"
      >
        arrow_upward
      </i>
    </div>
  </div>
</HeaderCell>
`;

exports[`<HeaderCellProperty/> should render children 1`] = `
<HeaderCell
  className=""
>
  <div
    className="content"
  >
    Bar
    <div
      className="cell"
    >
      <span
        className="title"
      >
        foo
      </span>
      <i
        className="material-icons md-1 directionIcon"
      >
        arrow_upward
      </i>
    </div>
  </div>
</HeaderCell>
`;

exports[`<HeaderCellProperty/> should render sorted property 1`] = `
<HeaderCell
  className=""
>
  <div
    className="content"
  >
    <div
      className="cell"
    >
      <span
        className="title"
      >
        foo
      </span>
      <i
        className="material-icons md-1 directionIcon isVisible"
      >
        arrow_downward
      </i>
    </div>
  </div>
</HeaderCell>
`;
